// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`css complex nested media queries 1`] = `
"@media (max-width:600px) {
  .css-acogag h1 {
    font-size: 1.4rem;
  }
}

@media (max-width:400px),(max-height:420px) {
  .css-acogag h1 {
    font-size: 1.1rem;
  }
}"
`;

exports[`css complex nested styles 1`] = `
".css-s7aswl {
  color: blue;
}

.css-s7aswl:hover {
  color: green;
}

.css-s7aswl:hover .name {
  color: amethyst;
}

.css-s7aswl:hover .name:focus {
  color: burlywood;
}

@media (min-width:420px) {
  .css-s7aswl:hover .name:focus {
    color: rebeccapurple;
  }
}"
`;

exports[`css handles media query merges 1`] = `
".css-yno01n {
  color: darkslateblue;
  color: red;
  color: purple;
}

@media (min-width:420px) {
  .css-yno01n {
    color: amethyst;
  }
}

@media (min-width:640px) {
  .css-yno01n {
    color: rebeccapurple;
  }
}

@media (min-width:960px) {
  .css-yno01n {
    color: burlywood;
  }
}

@media (min-width:640px) {
  .css-yno01n {
    color: blue;
  }
}

@media (min-width:640px) {
  .css-yno01n {
    color: aquamarine;
  }
}"
`;

exports[`css media queries with multiple nested selectors 1`] = `
".css-17riori {
  color: blue;
}

@media (max-width:400px) {
  .css-17riori {
    color: green;
  }

  .css-17riori h1 {
    color: red;
  }

  .css-17riori span {
    color: red;
  }
}"
`;

exports[`css media query with nested selector with nested selector on root 1`] = `
".css-1ssiu3j span {
  color: blue;
}

@media (max-width:400px) {
  .css-1ssiu3j {
    color: green;
  }

  .css-1ssiu3j span {
    color: red;
  }
}"
`;

exports[`css media query with nested selector without declarations on root 1`] = `
"@media (max-width:400px) {
  .css-18muius {
    color: green;
  }

  .css-18muius span {
    color: red;
  }
}"
`;
